<resources>
    <string name="app_name">ImFitPlus</string>
    <string name="imfitplus">ImFitPlus</string>
    <string name="seja_bem_vindo_a">Seja Bem-Vindo(a)</string>
    <string name="textHealthProfile">Descubra seu perfil de saúde e receba recomendações personalizadas</string>
    <string name="comece_aqui">Comece aqui</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="idade">Idade</string>
    <string name="peso">Peso</string>
    <string name="altura">Altura</string>
    <string name="calcular_imc">Calcular IMC</string>
    <string name="resultado_do_teste_imc">Resultado do Teste IMC</string>
    <string name="imc">IMC</string>
    <string name="categoria">Categoria</string>
    <string name="calcular_gasto_cal_rico">Calcular Gasto Calórico</string>
    <string name="voltar">Voltar</string>
    <string name="gasto_cal_rico_di_rio">Gasto Calórico Diário</string>
    <string name="calcular_peso_ideal">Calcular Peso ideal</string>
    <string name="peso_ideal">Peso Ideal</string>
    <string name="gasto_calorico_ideal">Gasto Calórico Diario Ideal: %.2f</string>+
    <string name="nome_completo_variable">Nome Completo: %s</string>
    <string name="logo_imfitplus">logo_imfitplus</string>
    <string name="resumo_de_saude">Resumo de Saude</string>
    <string name="name">Name</string>
    <string name="email">email</string>
    <string name="adicionar_novo_registro">Adicionar Novo Registro</string>
    <string name="retornar_ao_hist_rico">Retornar ao Histórico</string>
    <string name="retornar_ao_inicio">Retornar ao Inicio</string>
    <string name="tmb">TMB</string>
    <string name="recomenda_o_de_ingest_o_de_agua">RECOMENDAÇÃO DE INGESTÃO DE AGUA</string>
    <string name="gasto_calorico_diario">GASTO CALORICO DIARIO</string>
    <string name="data_de_nascimento">Data de Nascimento:</string>
</resources>