<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <include layout="@layout/toolbar"/>
    <EditText
        android:id="@+id/etNomeCompleto"
        android:layout_marginStart="10dp"
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        android:hint="@string/nome_completo"
        android:maxLines="1"
        android:inputType="text"
        />
    <RadioGroup
        android:layout_marginStart="10dp"
        android:id="@+id/rgGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rbMasculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masculino"/>
        <RadioButton
            android:id="@+id/rbFeminino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feminino"/>
    </RadioGroup>
    <GridLayout
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:textSize="15sp"
            android:text="@string/data_de_nascimento"/>
        <EditText
            android:id="@+id/etDataNasc"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:hint="1970-01-01"
            android:inputType="text"/>
    </GridLayout>
    <GridLayout
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/etPeso"
            android:hint="@string/peso"
            android:layout_width="90dp"
            />
        <EditText
            android:id="@+id/etAltura"
            android:hint="@string/altura"
            android:layout_width="90dp"
            />
    </GridLayout>
    <Spinner
        android:id="@+id/spinnerAtividade"
        android:layout_marginStart="10dp"
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/btCalculoImc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/calcular_imc"
        android:layout_marginStart="10dp"/>
</LinearLayout>