<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ResultFormActivity">
    <include layout="@layout/toolbar"/>
    <TextView
        android:id="@+id/title_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultado_do_teste_imc"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5dp"
        android:textSize="30sp"
        android:layout_marginStart="10dp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tvNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_result"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:text="@string/nome_completo"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/tvImc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNome"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:text="@string/imc"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/tvCategoriaImc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvImc"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:text="@string/categoria"
        android:textSize="20sp"
        />
    <Button
        android:id="@+id/btCalculoGastoCalorico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvCategoriaImc"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/calcular_gasto_cal_rico"
        app:layout_constraintStart_toStartOf="parent"/>
    <Button
        android:id="@+id/btVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvCategoriaImc"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/voltar"
        app:layout_constraintStart_toEndOf="@id/btCalculoGastoCalorico"/>
</androidx.constraintlayout.widget.ConstraintLayout>