<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/violet">
        <TextView
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imfitplus"
            android:textStyle="bold"
            android:textColor="@color/white"/>
    </Toolbar>
    <TextView
        android:id="@+id/title_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gasto_cal_rico_di_rio"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5dp"
        android:textSize="30sp"
        android:layout_marginStart="10dp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tvNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_result"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:text="@string/nome_completo"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/tv_gasto_calorico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNome"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:text="@string/gasto_cal_rico_di_rio"
        android:textSize="20sp"
        />
    <Button
        android:id="@+id/btCalculoPesoIdeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_gasto_calorico"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/calcular_peso_ideal"
        app:layout_constraintStart_toStartOf="parent"/>
    <Button
        android:id="@+id/btVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_gasto_calorico"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/voltar"
        app:layout_constraintStart_toEndOf="@id/btCalculoPesoIdeal"/>
</androidx.constraintlayout.widget.ConstraintLayout>