<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">
    <include layout="@layout/toolbar"/>
    <TextView
        android:layout_marginStart="20dp"
        android:id="@+id/textWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:text="@string/seja_bem_vindo_a"/>
    <TextView
        android:id="@+id/textHealthProfile"
        android:layout_marginStart="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/textWelcome"
        android:text="@string/textHealthProfile"/>
    <Button
        android:id="@+id/btComeceAqui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textHealthProfile"
        app:layout_constraintStart_toStartOf="@id/textHealthProfile"
        android:layout_marginTop="30dp"
        android:text="@string/comece_aqui"/>
</androidx.constraintlayout.widget.ConstraintLayout>