<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/toolbar"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Resumo da Saude"
        android:textSize="30sp"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:id="@+id/tv_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NOME"
        android:layout_marginStart="10dp"/>
    <TextView
        android:id="@+id/tv_imc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="IMC"
        android:layout_marginStart="10dp"/>
    <TextView
        android:id="@+id/tv_imc_categoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CATEGORIA IMC"
        android:layout_marginStart="10dp"/>
    <TextView
        android:id="@+id/tv_peso_ideal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="PESO IDEAL"
        android:layout_marginStart="10dp"/>
    <TextView
        android:id="@+id/tv_gasto_calorico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gasto_calorico_diario"
        android:layout_marginStart="10dp"/>
    <TextView
        android:id="@+id/tv_rec_agua"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recomenda_o_de_ingest_o_de_agua"
        android:layout_marginStart="10dp"/>
    <TextView
        android:id="@+id/tv_fcmax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="FCMAX"
        android:layout_marginStart="10dp"/>
    <TextView
        android:id="@+id/tv_titulozona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="Zonas de Treino"
        android:layout_marginStart="10dp"/>
    <TextView
        android:id="@+id/tv_leve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ZONA LEVE"
        android:layout_marginStart="10dp"/>
    <TextView
        android:id="@+id/tv_queima"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ZONA QUEIMA DE GORDURA"
        android:layout_marginStart="10dp"/>
    <TextView
        android:id="@+id/tv_aerobica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ZONA AEROBICA"
        android:layout_marginStart="10dp"/>
    <TextView
        android:id="@+id/tv_anaerobica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ZONA ANAEROBICA"
        android:layout_marginStart="10dp"/>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <Button
        android:id="@+id/bt_retornar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retornar_ao_hist_rico"
        android:layout_margin="10dp"/>
    <Button
        android:id="@+id/bt_salvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Salvar Usuario"
        android:layout_margin="10dp"/>
    </GridLayout>
</LinearLayout>